# ai-research-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: design-decisions.md
docs/architecture/: overview.md
docs/milestones/: setup.md
scripts/: verify_setup.py
src/: __init__.py  complete_pipeline.py  orchestrator.py  pipeline.py
src/agents/: __init__.py  base_agent.py  enhanced_filter_agent.py  news_filter_agent.py  summarizer_agent.py  writer_agent.py
src/database/: db_manager.py
src/evaluation/: evaluator.py
src/factories/: fetcher_factory.py
src/fetchers/: __init__.py  base_fetcher.py  github_trending_fetcher.py  hackernews_fetcher.py  interfaces.py  rss_fetcher.py
src/mcp_servers/: __init__.py  database_server.py  hello_server.py  simple_client.py
src/models/: __init__.py  article.py
src/orchestration/: __init__.py
src/skills/: __init__.py  search_skill.py
src/storage/: __init__.py  base_storage.py  markdown_storage.py
src/strategies/: rate_limit_strategy.py
src/tools/: __init__.py  calculator.py  web_search.py
src/transformers/: article_transformer.py
src/utils/: rate_limiter.py
tests/: conftest.py  test_hackernews_fetcher.py  test_markdown_storage.py  test_news_filter_agent.py  test_orchestrator.py  test_patterns.py  test_substitutability.py
