[project]
name = "ai-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "aiosqlite>=0.20.0",
    "anyio>=4.13.0",
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.6",
    "litellm>=1.50.0",
    "mcp>=1.27.1",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
